test/suites/fail-lower/L-019b.expected
  × One or more errors occured.

Error: L-019

  × Invalid infix declaration: The right hand side of an infix declaration must take exactly two arguments.
   ╭─[L-019b.pol:1:17]
 1 │ infix _ -> _ := Fun(_,_,_)
   ·                 ──────────
   ╰────
