test/suites/fail-lower/L-019b.pol
infix _ -> _ := Fun(_,_,_)